Se le agrega el CCS al proyecto

--- a/index.html
+++ b/index.html
@@ -4,10 +4,129 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://kit.fontawesome.com/65837733d8.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="./css/style.css">
     <script src="./js/script.js"></script>
-    <title>Document</title>
+    <title>Charlie's Pizza</title>
 </head>
 <body>
-    
+    <header class="header"> <!-- Header Section-->
+        <div class="header__container">
+            <div class="header__logo">
+                <a href="index.html" class="header__logoLink">
+                    <img src="./img/logo.svg" alt="logo">
+                    <h1>Charlie's Pizza</h1>
+                </a>
+            </div>
+            <div class="header__navigation">
+                <ul class="header__boxNav">
+                    <li class="header__link">
+                        <a href="index.html" class="active">Home</a>
+                    </li>
+                    <li class="header__link">
+                        <a href="#">Menu</a>
+                    </li>
+                    <li class="header__link">
+                        <a href="#">Delivery</a>
+                    </li>
+                    <li class="header__link">
+                        <a href="#">About us</a>
+                    </li>
+                    <li class="header__link">
+                        <a href="#">Blog</a>
+                    </li>
+                </ul>
+            </div>
+            <div class="header__menu">
+                <spam class="header__search">
+                    <i class="fa-solid fa-magnifying-glass"></i>
+                </spam>
+                <spam class="header__cart">
+                    <i class="fa-solid fa-cart-shopping"></i>
+                </spam>
+                <button class="header__signIn">Sign In</button>
+            </div>
+        </div>
+    </header> <!-- Header Section-->
+
+    <main class="main"> <!-- Main Section-->
+        <div class="main__container">
+            <div class="main__slogan">
+                <h2>We Have The <span>Best Pizza!</span></h2>
+                <h3>Time to enjoy our delicious pizza.</h3>
+                <button>Orden Online</button>
+            </div>
+            <div class="transparency"></div>
+            <div class="main__image">
+                <img src="./img/main.svg" alt="pizza main">
+            </div>
+        </div>
+    </main> <!-- Main Section-->
+
+    <section class="pizza">
+        <h4 class="pizza__recipes">Trending Recipes</h4>
+        <div class="pizza__container">
+            <div class="pizza__card">
+                <img src="./img/pizza.jpg" alt="pizza">
+                <p class="pizza__cardTitle">Pepperoni Pizza</p>
+                <p class="pizza__cardDescription">Pizza with homemade spicy beef sausage</p>
+                <p class="pizza__price">$ 25.00</p>
+                <select>
+                    <option value="Regular">Regular</option>
+                </select>
+                <button>Add To Cart</button>
+            </div>
+            <div class="pizza__card">
+                <img src="./img/pizzaH.jpg" alt="pizza">
+                <p class="pizza__cardTitle">Hawaiian Pizza</p>
+                <p class="pizza__cardDescription">Pizza with homemade spicy beef sausage</p>
+                <p class="pizza__price">$ 25.00</p>
+                <select>
+                    <option value="Regular">Regular</option>
+                </select>
+                <button>Add To Cart</button>
+            </div>
+            <div class="pizza__card">
+                <img src="./img/pizzaN.jpg" alt="pizza">
+                <p class="pizza__cardTitle">Neapolitan Pizza</p>
+                <p class="pizza__cardDescription">Pizza with homemade spicy beef sausage</p>
+                <p class="pizza__price">$ 25.00</p>
+                <select>
+                    <option value="Regular">Regular</option>
+                </select>
+                <button>Add To Cart</button>
+            </div>
+            <div class="pizza__card">
+                <img src="./img/pizzaE.jpg" alt="pizza">
+                <p class="pizza__cardTitle">Spain Pizza</p>
+                <p class="pizza__cardDescription">Pizza with homemade spicy beef sausage</p>
+                <p class="pizza__price">$ 25.00</p>
+                <select>
+                    <option value="Regular">Regular</option>
+                </select>
+                <button>Add To Cart</button>
+            </div>
+            <div class="pizza__card">
+                <img src="./img/pizzaV.jpg" alt="pizza">
+                <p class="pizza__cardTitle">Vegetarian Pizza</p>
+                <p class="pizza__cardDescription">Pizza with homemade spicy beef sausage</p>
+                <p class="pizza__price">$ 25.00</p>
+                <select>
+                    <option value="Regular">Regular</option>
+                </select>
+                <button>Add To Cart</button>
+            </div>
+            <div class="pizza__card">
+                <img src="./img/pizzaM.jpg" alt="pizza">
+                <p class="pizza__cardTitle">Margherita Pizza</p>
+                <p class="pizza__cardDescription">Pizza with homemade spicy beef sausage</p>
+                <p class="pizza__price">$ 25.00</p>
+                <select>
+                    <option value="Regular">Regular</option>
+                </select>
+                <button>Add To Cart</button>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
