--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/65837733d8.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="./css/style.css">
-    <script src="./js/script.js"></script>
+    <script defer src="./js/script.js"></script>
     <title>Charlie's Pizza</title>
 </head>
 <body>
@@ -71,9 +71,7 @@
                 <p class="pizza__cardTitle">Pepperoni Pizza</p>
                 <p class="pizza__cardDescription">Pizza with homemade spicy beef sausage</p>
                 <p class="pizza__price">$ 25.00</p>
-                <select>
-                    <option value="Regular">Regular</option>
-                </select>
+                <select id="sizePizza"></select>
                 <button>Add To Cart</button>
             </div>
             <div class="pizza__card">
@@ -81,9 +79,7 @@
                 <p class="pizza__cardTitle">Hawaiian Pizza</p>
                 <p class="pizza__cardDescription">Pizza with homemade spicy beef sausage</p>
                 <p class="pizza__price">$ 25.00</p>
-                <select>
-                    <option value="Regular">Regular</option>
-                </select>
+                <select id="sizePizza2"></select>
                 <button>Add To Cart</button>
             </div>
             <div class="pizza__card">
@@ -91,9 +87,7 @@
                 <p class="pizza__cardTitle">Neapolitan Pizza</p>
                 <p class="pizza__cardDescription">Pizza with homemade spicy beef sausage</p>
                 <p class="pizza__price">$ 25.00</p>
-                <select>
-                    <option value="Regular">Regular</option>
-                </select>
+                <select class="sizePizza"></select>
                 <button>Add To Cart</button>
             </div>
             <div class="pizza__card">
@@ -101,9 +95,7 @@
                 <p class="pizza__cardTitle">Spain Pizza</p>
                 <p class="pizza__cardDescription">Pizza with homemade spicy beef sausage</p>
                 <p class="pizza__price">$ 25.00</p>
-                <select>
-                    <option value="Regular">Regular</option>
-                </select>
+                <select class="sizePizza"></select>
                 <button>Add To Cart</button>
             </div>
             <div class="pizza__card">
@@ -111,9 +103,7 @@
                 <p class="pizza__cardTitle">Vegetarian Pizza</p>
                 <p class="pizza__cardDescription">Pizza with homemade spicy beef sausage</p>
                 <p class="pizza__price">$ 25.00</p>
-                <select>
-                    <option value="Regular">Regular</option>
-                </select>
+                <select class="sizePizza"></select>
                 <button>Add To Cart</button>
             </div>
             <div class="pizza__card">
@@ -121,9 +111,7 @@
                 <p class="pizza__cardTitle">Margherita Pizza</p>
                 <p class="pizza__cardDescription">Pizza with homemade spicy beef sausage</p>
                 <p class="pizza__price">$ 25.00</p>
-                <select>
-                    <option value="Regular">Regular</option>
-                </select>
+                <select class="sizePizza"></select>
                 <button>Add To Cart</button>
             </div>
         </div>
