--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             <div class="main__slogan">
                 <h2>We Have The <span>Best Pizza!</span></h2>
                 <h3>Time to enjoy our delicious pizza.</h3>
-                <button>Orden Online</button>
+                <button id="OrdenPizza">Orden Online</button>
             </div>
             <div class="transparency"></div>
             <div class="main__image">
