--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/65837733d8.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="./css/style.css">
-    <script defer src="./js/script.js"></script>
+    <script defer src="./js/script2.js"></script>
     <title>Charlie's Pizza</title>
 </head>
 <body>
@@ -71,7 +71,9 @@
                 <p class="pizza__cardTitle">Pepperoni Pizza</p>
                 <p class="pizza__cardDescription">Pizza with homemade spicy beef sausage</p>
                 <p class="pizza__price">$ 25.00</p>
-                <select id="sizePizza"></select>
+                <select class="sizePizza">
+                    <option selected disabled>--- Select a product ---</option>
+                </select>
                 <button>Add To Cart</button>
             </div>
             <div class="pizza__card">
@@ -79,7 +81,9 @@
                 <p class="pizza__cardTitle">Hawaiian Pizza</p>
                 <p class="pizza__cardDescription">Pizza with homemade spicy beef sausage</p>
                 <p class="pizza__price">$ 25.00</p>
-                <select id="sizePizza2"></select>
+                <select class="sizePizza">
+                    <option selected disabled>--- Select a product ---</option>
+                </select>
                 <button>Add To Cart</button>
             </div>
             <div class="pizza__card">
@@ -87,7 +91,9 @@
                 <p class="pizza__cardTitle">Neapolitan Pizza</p>
                 <p class="pizza__cardDescription">Pizza with homemade spicy beef sausage</p>
                 <p class="pizza__price">$ 25.00</p>
-                <select class="sizePizza"></select>
+                <select class="sizePizza">
+                    <option selected disabled>--- Select a product ---</option>
+                </select>
                 <button>Add To Cart</button>
             </div>
             <div class="pizza__card">
@@ -95,7 +101,9 @@
                 <p class="pizza__cardTitle">Spain Pizza</p>
                 <p class="pizza__cardDescription">Pizza with homemade spicy beef sausage</p>
                 <p class="pizza__price">$ 25.00</p>
-                <select class="sizePizza"></select>
+                <select class="sizePizza">
+                    <option selected disabled>--- Select a product ---</option>
+                </select>
                 <button>Add To Cart</button>
             </div>
             <div class="pizza__card">
@@ -103,7 +111,9 @@
                 <p class="pizza__cardTitle">Vegetarian Pizza</p>
                 <p class="pizza__cardDescription">Pizza with homemade spicy beef sausage</p>
                 <p class="pizza__price">$ 25.00</p>
-                <select class="sizePizza"></select>
+                <select class="sizePizza">
+                    <option selected disabled>--- Select a product ---</option>
+                </select>
                 <button>Add To Cart</button>
             </div>
             <div class="pizza__card">
@@ -111,7 +121,9 @@
                 <p class="pizza__cardTitle">Margherita Pizza</p>
                 <p class="pizza__cardDescription">Pizza with homemade spicy beef sausage</p>
                 <p class="pizza__price">$ 25.00</p>
-                <select class="sizePizza"></select>
+                <select class="sizePizza">
+                    <option selected disabled>--- Select a product ---</option>
+                </select>
                 <button>Add To Cart</button>
             </div>
         </div>
