--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@
         <div class="pizza__container">
             <div class="pizza__card">
                 <img src="./img/pizza.jpg" alt="pizza">
-                <p class="pizza__cardTitle">Pepperoni Pizza</p>
-                <p class="pizza__cardDescription">Pizza with homemade spicy beef sausage</p>
+                <p class="pizza__cardTitle example">Pepperoni Pizza</p>
+                <p class="pizza__cardDescription example" >Pizza with homemade spicy beef sausage</p>
                 <p class="pizza__price">$ 25.00</p>
                 <select class="sizePizza">
                     <option selected disabled>--- Select a product ---</option>
