--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/65837733d8.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="./css/style.css">
-    <script defer src="./js/script2.js"></script>
+    <script defer src="./js/variables.js"></script>
+    <script defer src="./js/class_operacion.js"></script>
+    <script defer src="./js/app.js"></script>
     <title>Charlie's Pizza</title>
 </head>
 <body>
@@ -70,61 +72,61 @@
                 <img src="./img/pizza.jpg" alt="pizza">
                 <p class="pizza__cardTitle example">Pepperoni Pizza</p>
                 <p class="pizza__cardDescription example" >Pizza with homemade spicy beef sausage</p>
-                <p class="pizza__price">$ 25.00</p>
+                <p class="pizza__price">$ 0</p>
                 <select class="sizePizza">
-                    <option selected disabled>--- Select a product ---</option>
+                    <option selected disabled value="0">--- Select a product ---</option>
                 </select>
-                <button>Add To Cart</button>
+                <button class="addToCart">Add To Cart</button>
             </div>
             <div class="pizza__card">
                 <img src="./img/pizzaH.jpg" alt="pizza">
                 <p class="pizza__cardTitle">Hawaiian Pizza</p>
                 <p class="pizza__cardDescription">Pizza with homemade spicy beef sausage</p>
-                <p class="pizza__price">$ 25.00</p>
+                <p class="pizza__price">$ 0</p>
                 <select class="sizePizza">
                     <option selected disabled>--- Select a product ---</option>
                 </select>
-                <button>Add To Cart</button>
+                <button class="addToCart">Add To Cart</button>
             </div>
             <div class="pizza__card">
                 <img src="./img/pizzaN.jpg" alt="pizza">
                 <p class="pizza__cardTitle">Neapolitan Pizza</p>
                 <p class="pizza__cardDescription">Pizza with homemade spicy beef sausage</p>
-                <p class="pizza__price">$ 25.00</p>
+                <p class="pizza__price">$ 0</p>
                 <select class="sizePizza">
                     <option selected disabled>--- Select a product ---</option>
                 </select>
-                <button>Add To Cart</button>
+                <button class="addToCart">Add To Cart</button>
             </div>
             <div class="pizza__card">
                 <img src="./img/pizzaE.jpg" alt="pizza">
                 <p class="pizza__cardTitle">Spain Pizza</p>
                 <p class="pizza__cardDescription">Pizza with homemade spicy beef sausage</p>
-                <p class="pizza__price">$ 25.00</p>
+                <p class="pizza__price">$ 0</p>
                 <select class="sizePizza">
                     <option selected disabled>--- Select a product ---</option>
                 </select>
-                <button>Add To Cart</button>
+                <button class="addToCart">Add To Cart</button>
             </div>
             <div class="pizza__card">
                 <img src="./img/pizzaV.jpg" alt="pizza">
                 <p class="pizza__cardTitle">Vegetarian Pizza</p>
                 <p class="pizza__cardDescription">Pizza with homemade spicy beef sausage</p>
-                <p class="pizza__price">$ 25.00</p>
+                <p class="pizza__price">$ 0</p>
                 <select class="sizePizza">
                     <option selected disabled>--- Select a product ---</option>
                 </select>
-                <button>Add To Cart</button>
+                <button class="addToCart">Add To Cart</button>
             </div>
             <div class="pizza__card">
                 <img src="./img/pizzaM.jpg" alt="pizza">
                 <p class="pizza__cardTitle">Margherita Pizza</p>
                 <p class="pizza__cardDescription">Pizza with homemade spicy beef sausage</p>
-                <p class="pizza__price">$ 25.00</p>
+                <p class="pizza__price">$ 0</p>
                 <select class="sizePizza">
                     <option selected disabled>--- Select a product ---</option>
                 </select>
-                <button>Add To Cart</button>
+                <button class="addToCart">Add To Cart</button>
             </div>
         </div>
     </section>
