Se agrega carrito, falta modificar un poco

--- a/index.html
+++ b/index.html
@@ -76,7 +76,9 @@
                 <select class="sizePizza">
                     <option selected disabled value="0">--- Select a product ---</option>
                 </select>
-                <button class="addToCart">Add To Cart</button>
+                <a href="./cart.html">
+                    <button class="addToCart">Add To Cart</button> 
+                </a>
             </div>
             <div class="pizza__card">
                 <img src="./img/pizzaH.jpg" alt="pizza">
@@ -86,7 +88,9 @@
                 <select class="sizePizza">
                     <option selected disabled>--- Select a product ---</option>
                 </select>
-                <button class="addToCart">Add To Cart</button>
+                <a href="./cart.html">
+                    <button class="addToCart">Add To Cart</button> 
+                </a>
             </div>
             <div class="pizza__card">
                 <img src="./img/pizzaN.jpg" alt="pizza">
@@ -96,7 +100,9 @@
                 <select class="sizePizza">
                     <option selected disabled>--- Select a product ---</option>
                 </select>
-                <button class="addToCart">Add To Cart</button>
+                <a href="./cart.html">
+                    <button class="addToCart">Add To Cart</button> 
+                </a>
             </div>
             <div class="pizza__card">
                 <img src="./img/pizzaE.jpg" alt="pizza">
@@ -106,7 +112,9 @@
                 <select class="sizePizza">
                     <option selected disabled>--- Select a product ---</option>
                 </select>
-                <button class="addToCart">Add To Cart</button>
+                <a href="./cart.html">
+                    <button class="addToCart">Add To Cart</button> 
+                </a>
             </div>
             <div class="pizza__card">
                 <img src="./img/pizzaV.jpg" alt="pizza">
@@ -116,7 +124,9 @@
                 <select class="sizePizza">
                     <option selected disabled>--- Select a product ---</option>
                 </select>
-                <button class="addToCart">Add To Cart</button>
+                <a href="./cart.html">
+                    <button class="addToCart">Add To Cart</button> 
+                </a>
             </div>
             <div class="pizza__card">
                 <img src="./img/pizzaM.jpg" alt="pizza">
@@ -126,7 +136,9 @@
                 <select class="sizePizza">
                     <option selected disabled>--- Select a product ---</option>
                 </select>
-                <button class="addToCart">Add To Cart</button>
+                <a href="./cart.html">
+                    <button class="addToCart">Add To Cart</button> 
+                </a>
             </div>
         </div>
     </section>
