--- a/cart.html
+++ b/cart.html
@@ -9,6 +9,7 @@
     <script defer src="./js/variables.js"></script>
     <script defer src="./js/class_operacion.js"></script>
     <script defer src="./js/cart.js"></script>
+    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <title>Charlie's Pizza</title>
 </head>
 <body>
@@ -67,6 +68,14 @@
                 </div>
                 <div class="main__optionValuetwo">
                     <p id="optionTwo">$</p>
+                </div>
+            </div>
+            <div class="main__btn">
+                <div class="main__btnbox">
+                    <button id="btn-cancelar">Cancelar compra</button>
+                </div>
+                <div class="main__btnboxtwo">
+                    <button id="btn-aceptar">Comprar</button>
                 </div>
             </div>
         </div>
