--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/65837733d8.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="./css/style.css">
-    <script defer src="./js/variables.js"></script>
-    <script defer src="./js/class_operacion.js"></script>
-    <script defer src="./js/app.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script defer src="./js/new.js"></script>
     <title>Charlie's Pizza</title>
 </head>
 <body>
@@ -23,7 +23,7 @@
             <div class="header__navigation">
                 <ul class="header__boxNav">
                     <li class="header__link">
-                        <a href="index.html" class="active">Home</a>
+                        <a href="index.html" class="active">Inicio</a>
                     </li>
                     <li class="header__link">
                         <a href="#">Menu</a>
@@ -32,10 +32,10 @@
                         <a href="#">Delivery</a>
                     </li>
                     <li class="header__link">
-                        <a href="#">About us</a>
+                        <a href="#">Nosotros</a>
                     </li>
                     <li class="header__link">
-                        <a href="#">Blog</a>
+                        <a href="#">Contactanos</a>
                     </li>
                 </ul>
             </div>
@@ -46,7 +46,7 @@
                 <spam class="header__cart">
                     <i class="fa-solid fa-cart-shopping"></i>
                 </spam>
-                <button class="header__signIn">Sign In</button>
+                <button class="header__signIn">Inicia Sesion</button>
             </div>
         </div>
     </header> <!-- Header Section-->
@@ -54,9 +54,9 @@
     <main class="main"> <!-- Main Section-->
         <div class="main__container">
             <div class="main__slogan">
-                <h2>We Have The <span>Best Pizza!</span></h2>
-                <h3>Time to enjoy our delicious pizza.</h3>
-                <button id="OrdenPizza">Orden Online</button>
+                <h2>Tenemos las <span>mejores Pizzas!</span></h2>
+                <h3>Es tiempo de disfrutar de nuestras Pizzas.</h3>
+                <button id="OrdenPizza">Ordena Online</button>
             </div>
             <div class="transparency"></div>
             <div class="main__image">
@@ -66,81 +66,72 @@
     </main> <!-- Main Section-->
 
     <section class="pizza">
-        <h4 class="pizza__recipes">Trending Recipes</h4>
+        <h4 class="pizza__recipes">Que pizza deseas ordenar?</h4>
         <div class="pizza__container">
             <div class="pizza__card">
-                <img src="./img/pizza.jpg" alt="pizza">
-                <p class="pizza__cardTitle example">Pepperoni Pizza</p>
-                <p class="pizza__cardDescription example" >Pizza with homemade spicy beef sausage</p>
-                <p class="pizza__price">$ 0</p>
+                <img src="./img/0.jpg" alt="pizza" class="img_card">
+                <p class="pizza__cardTitle">Que pizza deseas?</p>
+                <p class="pizza__cardDescription">Pizza with homemade spicy beef sausage</p>
+                <p class="pizza__price">$</p>
                 <select class="sizePizza">
-                    <option selected disabled value="0">--- Select a product ---</option>
+                    <option selected disabled value="0">--- Tamaño de la pizza ---</option>
                 </select>
-                <a href="./cart.html">
-                    <button class="addToCart">Add To Cart</button> 
-                </a>
+                <button class="addToCart">Añadir al carrito</button> 
             </div>
             <div class="pizza__card">
-                <img src="./img/pizzaH.jpg" alt="pizza">
-                <p class="pizza__cardTitle">Hawaiian Pizza</p>
+                <img src="./img/1.jpg" alt="pizza" class="img_card">
+                <p class="pizza__cardTitle">Que pizza deseas?</p>
                 <p class="pizza__cardDescription">Pizza with homemade spicy beef sausage</p>
-                <p class="pizza__price">$ 0</p>
+                <p class="pizza__price">$</p>
                 <select class="sizePizza">
-                    <option selected disabled>--- Select a product ---</option>
+                    <option selected disabled value="0">--- Tamaño de la pizza ---</option>
                 </select>
-                <a href="./cart.html">
-                    <button class="addToCart">Add To Cart</button> 
-                </a>
+                <button class="addToCart">Añadir al carrito</button> 
             </div>
             <div class="pizza__card">
-                <img src="./img/pizzaN.jpg" alt="pizza">
-                <p class="pizza__cardTitle">Neapolitan Pizza</p>
+                <img src="./img/2.jpg" alt="pizza" class="img_card">
+                <p class="pizza__cardTitle">Que pizza deseas?</p>
                 <p class="pizza__cardDescription">Pizza with homemade spicy beef sausage</p>
-                <p class="pizza__price">$ 0</p>
+                <p class="pizza__price">$</p>
                 <select class="sizePizza">
-                    <option selected disabled>--- Select a product ---</option>
+                    <option selected disabled value="0">--- Tamaño de la pizza ---</option>
                 </select>
-                <a href="./cart.html">
-                    <button class="addToCart">Add To Cart</button> 
-                </a>
+                <button class="addToCart">Añadir al carrito</button> 
             </div>
             <div class="pizza__card">
-                <img src="./img/pizzaE.jpg" alt="pizza">
-                <p class="pizza__cardTitle">Spain Pizza</p>
+                <img src="./img/3.jpg" alt="pizza" class="img_card">
+                <p class="pizza__cardTitle">Que pizza deseas?</p>
                 <p class="pizza__cardDescription">Pizza with homemade spicy beef sausage</p>
-                <p class="pizza__price">$ 0</p>
+                <p class="pizza__price">$</p>
                 <select class="sizePizza">
-                    <option selected disabled>--- Select a product ---</option>
+                    <option selected disabled value="0">--- Tamaño de la pizza ---</option>
                 </select>
-                <a href="./cart.html">
-                    <button class="addToCart">Add To Cart</button> 
-                </a>
+                <button class="addToCart">Añadir al carrito</button> 
             </div>
             <div class="pizza__card">
-                <img src="./img/pizzaV.jpg" alt="pizza">
-                <p class="pizza__cardTitle">Vegetarian Pizza</p>
+                <img src="./img/4.jpg" alt="pizza" class="img_card">
+                <p class="pizza__cardTitle">Que pizza deseas?</p>
                 <p class="pizza__cardDescription">Pizza with homemade spicy beef sausage</p>
-                <p class="pizza__price">$ 0</p>
+                <p class="pizza__price">$</p>
                 <select class="sizePizza">
-                    <option selected disabled>--- Select a product ---</option>
+                    <option selected disabled value="0">--- Tamaño de la pizza ---</option>
                 </select>
-                <a href="./cart.html">
-                    <button class="addToCart">Add To Cart</button> 
-                </a>
+                <button class="addToCart">Añadir al carrito</button> 
             </div>
             <div class="pizza__card">
-                <img src="./img/pizzaM.jpg" alt="pizza">
-                <p class="pizza__cardTitle">Margherita Pizza</p>
+                <img src="./img/5.jpg" alt="pizza" class="img_card">
+                <p class="pizza__cardTitle">Que pizza deseas?</p>
                 <p class="pizza__cardDescription">Pizza with homemade spicy beef sausage</p>
-                <p class="pizza__price">$ 0</p>
+                <p class="pizza__price">$</p>
                 <select class="sizePizza">
-                    <option selected disabled>--- Select a product ---</option>
+                    <option selected disabled value="0">--- Tamaño de la pizza ---</option>
                 </select>
-                <a href="./cart.html">
-                    <button class="addToCart">Add To Cart</button> 
-                </a>
+                <button class="addToCart">Añadir al carrito</button> 
             </div>
         </div>
     </section>
+    <a href="./cart.html">
+        <button class="goToCart hide animate__animated animate__backInRight">Ir a Carrito</button>
+    </a>
 </body>
 </html>
